# madnis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
docs/source/: conf.py  first-steps.rst  flows.rst  index.rst  installation.rst  integration-settings.rst  madnis.integrator.rst  madnis.nn.rst  multi-channel.rst  reference.rst  single-channel.rst
madnis/integrator/: __init__.py  buffer.py  channel_grouping.py  integrand.py  integrator.py  losses.py  metrics.py  samples.py  vegas_pretraining.py
madnis/nn/: __init__.py  discrete_flow.py  discrete_made.py  discrete_transformer.py  flow.py  masked_mlp.py  mixed_flow.py  mlp.py  splines.py
tests/: test_flow.py
