[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "madnis"
version = "1.0.0"
authors = [
  { name="Ramon Winterhalder", email="ramon.winterhalder@unimi.it" },
  { name="Theo Heimel", email="theo.heimel@uclouvain.be" },
]
description = "Library for neural importance sampling"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "torch",
]

[project.optional-dependencies]
vegas = ["vegas"]

[project.urls]
Homepage = "https://github.com/madgraph-ml/MadNIS"
Issues = "https://github.com/madgraph-ml/MadNIS/issues"
